2013-09-02  Mike Frysinger  <vapier@gentoo.org>

	* Versions.def (libc): Add GLIBC_2.19.

2013-09-02  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/tst-fanotify.c: New test.
	* sysdeps/unix/sysv/linux/Makefile (tests): Add tst-fanotify.

2013-09-02  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14155]
	* sysdeps/ieee754/flt-32/e_jnf.c (__ieee754_jnf): Use double for
	intermediate calculations in recurrence.
	(__ieee754_ynf): Likewise.
	* math/libm-test.inc (jn_test_data): Do not allow spurious
	underflow exception.  Add more tests.
	(yn_test_data): Add more tests.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2013-09-02   Ondřej Bílka  <neleai@seznam.cz>

	* sysdeps/powerpc/powerpc32/power6/memcpy.S: Fix typo.

2013-08-30   Ondřej Bílka  <neleai@seznam.cz>

	* csu/init-first.c: Fix then/than typos.
	* locale/programs/ld-collate.c: Likewise.
	* locale/programs/linereader.h: Likewise.
	* manual/charset.texi: Likewise.
	* manual/filesys.texi: Likewise.
	* manual/stdio.texi: Likewise.
	* manual/string.texi: Likewise.
	* stdlib/fmtmsg.c: Likewise.
	* sysdeps/i386/stpncpy.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/memcpy.S: Likewise.
	* sysdeps/powerpc/powerpc32/power6/memset.S: Likewise.
	* sysdeps/powerpc/powerpc64/power6/memcpy.S: Likewise.
	* sysdeps/powerpc/powerpc64/power6/memset.S: Likewise.

2013-08-30   Ondřej Bílka  <neleai@seznam.cz>

	* elf/dl-open.c: Fix typos.
	* iconvdata/gbbig5.c: Likewise.
	* iconvdata/iso-2022-jp.c: Likewise.
	* iconv/gconv_int.h: Likewise.
	* iconv/loop.c: Likewise.
	* nis/rpcsvc/nis.h: Likewise.
	* resolv/ns_name.c: Likewise.
	* stdio-common/vfscanf.c: Likewise.
	* streams/stropts.h: Likewise.
	* sunrpc/rpc_thread.c: Likewise.
	* sysdeps/i386/strpbrk.S: Likewise.
	* sysdeps/ieee754/k_standard.c: Likewise.
	* sysdeps/ieee754/ldbl-128/e_expl.c: Likewise.
	* sysdeps/ieee754/ldbl-128ibm/e_expl.c: Likewise.
	* sysdeps/mach/hurd/dl-sysdep.c: Likewise.